--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dev_dependencies:
   shared_preferences: ^0.5.6+3
   random_string: ^2.0.1
   google_sign_in: ^4.5.6
+  audioplayers: ^0.17.0
+  file_picker: ^2.0.13
 
 
 # For information on the generic Dart part of this file, see the
